          another via multiple levels of indirection,
          rather than rendering the non-adapted
          column.
        - the "polymorphic discriminator" column is
          only rendered for the actual mapper being
          queried against. The column won't be
          "pulled in" from a subclass or superclass
          mapper since it's not needed.
      
- sql
    - Fixed the import weirdness in sqlalchemy.sql
      to not export __names__ [ticket:1215].
    
    - Using the same ForeignKey object repeatedly
      raises an error instead of silently failing
      later. [ticket:1238]
      
    - Added NotImplementedError for params() method
      on Insert/Update/Delete constructs.  These items
      currently don't support this functionality, which
      also would be a little misleading compared to
      values().

    - the "passive" flag on session.is_modified()
      is correctly propagated to the attribute manager.

    - union() and union_all() will not whack 
      any order_by() that has been applied to the 
      select()s inside.  If you union() a 
      select() with order_by() (presumably to support
      LIMIT/OFFSET), you should also call self_group() 
      on it to apply parenthesis.
      
- documentation
    - Tickets [ticket:1200] [ticket:1149].
      
    - Added note about create_session() defaults.
    
    - Added section about metadata.reflect().
    
    - Updated `TypeDecorator` section.
    
    - Rewrote the "threadlocal" strategy section of 
      the docs due to recent confusion over this 
      feature.
     
    - Removed badly out of date 'polymorphic_fetch'
      and 'select_table' docs from inheritance, 
      reworked the second half of "joined table
      inheritance".
      
    - Documented `comparator_factory` kwarg, added
      new doc section "Custom Comparators".
    
- postgres
    - Calling alias.execute() in conjunction with
      server_side_cursors won't raise AttributeError.

- oracle